# GNetworking

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh
include/: Socket.h  WSA.h
include/GNetworking/: Socket.h  Socket.hpp  WSA.hpp
src/: CMakeLists.txt  Socket.cpp  WSA.cpp  main.cpp  main_c.cpp
src/Socket/: CMakeLists.txt  LinuxSocket.cpp  WindowsSocket.cpp
tests/: Client.cpp  Server.cpp
